fix height in modal overflow-y

--- a/public/Assets/css/wd_style.css
+++ b/public/Assets/css/wd_style.css
@@ -53,11 +53,10 @@ header {
   position: fixed;
   width: 100%;
   height: auto;
+  max-height: 100%;
   overflow-y: auto; /* Pour activer le défilement vertical */
 }
-#addEventModal{ /* CUSTOM */
-  height: 100%;
-}
+
 
 /* MODAL DETAILS */
 
