--- a/public/css/wd_composed_style.css
+++ b/public/css/wd_composed_style.css
@@ -5681,13 +5681,9 @@ header {
   position: fixed;
   width: 100%;
   height: auto;
+  max-height: 100%;
   overflow-y: auto;
   /* Pour activer le défilement vertical */
-}
-
-#addEventModal{
-  /* CUSTOM */
-  height: 100%;
 }
 
 /* MODAL DETAILS */
